JavaFx application with TestFx